--- a/SocialAssistInfoSystem/SocialAssistInfoSystem.Client/Layout/NavMenu.razor
+++ b/SocialAssistInfoSystem/SocialAssistInfoSystem.Client/Layout/NavMenu.razor
@@ -3,12 +3,12 @@
 @inject NavigationManager NavigationManager
 
 <MudNavMenu>
-    <MudNavLink Href="/application" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Application</MudNavLink>
+@*     <MudNavLink Href="/application" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Application</MudNavLink> *@
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <AuthorizeView>
         <Authorized>
             @* <MudNavLink Href="application" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AppRegistration">Application</MudNavLink> *@
-            <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+         @*    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink> *@
            @*  <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink> *@
 
             <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
@@ -16,7 +16,7 @@
            @*  <MudNavLink Href="auth" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Lock">Auth Required</MudNavLink> *@
 
             <MudNavLink Href="Account/Manage" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Person">Account</MudNavLink>
-           @*  @context.User.Identity?.Name *@
+            @context.User.Identity?.Name
             <form action="Account/Logout" method="post">
                 <AntiforgeryToken />
                 <input type="hidden" name="ReturnUrl" value="@currentUrl" />
