--- a/SocialAssistInfoSystem/SocialAssistInfoSystem.Client/Layout/NavMenu.razor
+++ b/SocialAssistInfoSystem/SocialAssistInfoSystem.Client/Layout/NavMenu.razor
@@ -4,9 +4,10 @@
 
 <MudNavMenu>
 @*     <MudNavLink Href="/application" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Application</MudNavLink> *@
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    @* <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink> *@
     <AuthorizeView>
         <Authorized>
+            <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
             @* <MudNavLink Href="application" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.AppRegistration">Application</MudNavLink> *@
          @*    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink> *@
            @*  <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink> *@
